# boatrace-crawler

./: .env.original  CHANGELOG  CHANGELOG.md  Dockerfile  Dockerfile.production  README.md  docker-compose.yml  logging.conf  pyproject.toml  scrapy.cfg  tee
.github/workflows/: build-and-push.yml  build.yml
boatrace_crawler/: __init__.py  __main__.py  contracts.py  items.py  main.py  middlewares.py  pipelines.py  racelist.py  settings.py
boatrace_crawler/spiders/: boatrace_spider.py  orangebuoy.py  orangebuoy_spider.py
boatrace_mq/: main.py
